@@ -2,6 +2,8 @@
 =================
 
 - Don't complain and quit if persistence_file option is given (bug #802423).
+- Initialise listeners correctly when clients with duplicate client ids
+  connect. Bug #801678.
 
 0.11.2 - 20110626
 =================
